# pyromai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: coding-rules.md  todos-before-merge.md
.claude/commands/: start-feature.md  sync.md
.github/workflows/: changelog-enforcer.yml  ci.yml  pr-ci.yml  publish.yml  release.yml
src/: __init__.py
src/analyzer/: __init__.py  __main__.py  models.py  parser.py
src/analyzer/agents/: __init__.py
tests/: __init__.py  test_analyzer.py
