[project]
name = "clean-code-analyzer"
version = "0.1.0"
description = "CLI tool for analyzing Python code quality using AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "radon>=6.0.0",
    "tenacity>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
