[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]

[project]
name = "pyromai"
version = "0.1.0"
description = "AI-powered Python code analyzer for Clean Code and Clean Architecture"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Julien Valera", email = "julienpierre.valera@gmail.com"},
]
keywords = ["code-analysis", "clean-code", "clean-architecture", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "radon>=6.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
pyromai = "analyzer.__main__:main"

[project.urls]
Homepage = "https://github.com/julienvalera/pyromai"
Repository = "https://github.com/julienvalera/pyromai"
Issues = "https://github.com/julienvalera/pyromai/issues"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",
    "ty>=0.0.1a1",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes (errors)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "A",    # flake8-builtins (shadowing builtins)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"src/analyzer/__main__.py" = ["B008"]  # Typer pattern uses function calls in argument defaults
"src/analyzer/parser.py" = ["N802"]  # AST.NodeVisitor method names must match exactly (visit_FunctionDef, etc.)
"tests/**/*.py" = ["B008"]  # Allow function calls in test fixtures

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
# Ty configuration (using defaults for alpha version)
# Full config docs at: https://docs.astral.sh/ty/

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
